Partially update font handling part of iText to 4.2.0