@@ -1,6 +1,5 @@
 /*
- * $Id: FontDetails.java,v 1.44 2005/05/04 14:32:23 blowagie Exp $
- * $Name:  $
+ * $Id: FontDetails.java 4024 2009-07-12 00:33:57Z xlv $
  *
  * Copyright 2001, 2002 by Paulo Soares.
  *
@@ -16,7 +15,6 @@
  * Contributor(s): all the names of the contributors are added in the source code
  * where applicable.
  *
- *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
  * License as published by the Free Software Foundation; either
@@ -31,75 +29,80 @@
  * License along with this library; if not, write to the
  * Free Software Foundation, Inc., 51 Franklin St, Fifth Floor,
  * Boston, MA  02110-1301, USA.
- *
- *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Library General Public
- * License as published by the Free Software Foundation; either
- * version 2 of the License, or (at your option) any later version.
- * 
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Library General Public License for more details.
- * 
- * You should have received a copy of the GNU Library General Public
- * License along with this library; if not, write to the
- * Free Software Foundation, Inc., 51 Franklin St, Fifth Floor,
- * Boston, MA  02110-1301, USA.
- *
  *
  * If you didn't download this code from the following link, you should check if
  * you aren't using an obsolete version:
  * http://www.lowagie.com/iText/
  */
 
+// pdftk-java iText base version 4.2.0
+// pdftk-java modified no
+
 package com.gitlab.pdftk_java.com.lowagie.text.pdf;
 
-import com.gitlab.pdftk_java.com.lowagie.text.ExceptionConverter;
-import java.util.HashMap;
 import java.io.UnsupportedEncodingException;
-/** Each font in the document will have an instance of this class
+import java.util.HashMap;
+
+import com.gitlab.pdftk_java.com.lowagie.text.ExceptionConverter;
+import com.gitlab.pdftk_java.com.lowagie.text.Utilities;
+
+/**
+ * Each font in the document will have an instance of this class
  * where the characters used will be represented.
  *
  * @author  Paulo Soares (psoares@consiste.pt)
  */
 class FontDetails {
     
-    /** The indirect reference to this font
+    /**
+     * The indirect reference to this font
      */    
     PdfIndirectReference indirectReference;
-    /** The font name that appears in the document body stream
+    /**
+     * The font name that appears in the document body stream
      */    
     PdfName fontName;
-    /** The font
+    /**
+     * The font
      */    
     BaseFont baseFont;
-    /** The font if its an instance of <CODE>TrueTypeFontUnicode</CODE>
+    /**
+     * The font if it's an instance of <CODE>TrueTypeFontUnicode</CODE>
      */    
     TrueTypeFontUnicode ttu;
-
+    /**
+     * The font if it's an instance of <CODE>CJKFont</CODE>
+     */
     CJKFont cjkFont;
-    /** The array used with single byte encodings
+    /**
+     * The array used with single byte encodings
      */    
     byte shortTag[];
-    /** The map used with double byte encodings. The key is Integer(glyph) and the
-     * value is int[]{glyph, width, Unicode code}
+    /**
+     * The map used with double byte encodings. The key is Integer(glyph) and
+     * the value is int[]{glyph, width, Unicode code}
      */    
     HashMap longTag;
-    
+    /**
+     * IntHashtable with CIDs of CJK glyphs that are used in the text.
+     */
     IntHashtable cjkTag;
-    /** The font type
+    /**
+     * The font type
      */    
     int fontType;
-    /** <CODE>true</CODE> if the font is symbolic
+    /**
+     * <CODE>true</CODE> if the font is symbolic
      */    
     boolean symbolic;
-    /** Indicates if all the glyphs and widths for that particular
+    /**
+     * Indicates if only a subset of the glyphs and widths for that particular
      * encoding should be included in the document.
      */
     protected boolean subset = true;
-    /** Each font used in a document has an instance of this class.
+    
+    /**
+     * Each font used in a document has an instance of this class.
      * This class stores the characters used in the document and other
      * specifics unique to the current working document.
      * @param fontName the font name
@@ -128,28 +131,32 @@ class FontDetails {
         }
     }
     
-    /** Gets the indirect reference to this font.
+    /**
+     * Gets the indirect reference to this font.
      * @return the indirect reference to this font
      */    
     PdfIndirectReference getIndirectReference() {
         return indirectReference;
     }
     
-    /** Gets the font name as it appears in the document body.
+    /**
+     * Gets the font name as it appears in the document body.
      * @return the font name
      */    
     PdfName getFontName() {
         return fontName;
     }
     
-    /** Gets the <CODE>BaseFont</CODE> of this font.
+    /**
+     * Gets the <CODE>BaseFont</CODE> of this font.
      * @return the <CODE>BaseFont</CODE> of this font
      */    
     BaseFont getBaseFont() {
         return baseFont;
     }
     
-    /** Converts the text into bytes to be placed in the document.
+    /**
+     * Converts the text into bytes to be placed in the document.
      * The conversion is done according to the font and the encoding and the characters
      * used are stored.
      * @param text the text to convert
@@ -165,7 +172,7 @@ class FontDetails {
                 b = baseFont.convertToBytes(text);
                 int len = b.length;
                 for (int k = 0; k < len; ++k)
-                    shortTag[((int)b[k]) & 0xff] = 1;
+                    shortTag[b[k] & 0xff] = 1;
                 break;
             }
             case BaseFont.FONT_TYPE_CJK: {
@@ -197,17 +204,24 @@ class FontDetails {
                         }
                     }
                     else {
-                        for (int k = 0; k < len; ++k) {
-                            char c = text.charAt(k);
-                            metrics = ttu.getMetricsTT(c);
-                            if (metrics == null)
-                                continue;
-                            int m0 = metrics[0];
-                            Integer gl = new Integer(m0);
-                            if (!longTag.containsKey(gl))
-                                longTag.put(gl, new int[]{m0, metrics[1], c});
-                            glyph[i++] = (char)m0;
-                        }
+                    	for (int k = 0; k < len; ++k) {
+                    		int val;
+                    		if (Utilities.isSurrogatePair(text, k)) {
+                    			val = Utilities.convertToUtf32(text, k);
+                    			k++;
+                    		}
+                    		else {
+                    			val = text.charAt(k);
+                    		}
+                    		metrics = ttu.getMetricsTT(val);
+                    		if (metrics == null)
+                    			continue;
+                    		int m0 = metrics[0];
+                    		Integer gl = new Integer(m0);
+                    		if (!longTag.containsKey(gl))
+                    			longTag.put(gl, new int[]{m0, metrics[1], val});
+                    		glyph[i++] = (char)m0;
+                    	}
                     }
                     String s = new String(glyph, 0, i);
                     b = s.getBytes(CJKFont.CJK_ENCODING);
@@ -221,7 +235,8 @@ class FontDetails {
         return b;
     }
     
-    /** Writes the font definition to the document.
+    /**
+     * Writes the font definition to the document.
      * @param writer the <CODE>PdfWriter</CODE> of this document
      */    
     void writeFont(PdfWriter writer) {
@@ -234,34 +249,26 @@ class FontDetails {
                 case BaseFont.FONT_TYPE_TT: {
                     int firstChar;
                     int lastChar;
-                    if (subset) {
-                        for (firstChar = 0; firstChar < 256; ++firstChar) {
-                            if (shortTag[firstChar] != 0)
-                                break;
-                        }
-                        for (lastChar = 255; lastChar >= firstChar; --lastChar) {
-                            if (shortTag[lastChar] != 0)
-                                break;
-                        }
-                        if (firstChar > 255) {
-                            firstChar = 255;
-                            lastChar = 255;
-                        }
+                    for (firstChar = 0; firstChar < 256; ++firstChar) {
+                        if (shortTag[firstChar] != 0)
+                            break;
                     }
-                    else {
-                        for (int k = 0; k < shortTag.length; ++k)
-                            shortTag[k] = 1;
-                        firstChar = 0;
-                        lastChar = shortTag.length - 1;
+                    for (lastChar = 255; lastChar >= firstChar; --lastChar) {
+                        if (shortTag[lastChar] != 0)
+                            break;
                     }
-                    baseFont.writeFont(writer, indirectReference, new Object[]{new Integer(firstChar), new Integer(lastChar), shortTag});
+                    if (firstChar > 255) {
+                        firstChar = 255;
+                        lastChar = 255;
+                    }
+                    baseFont.writeFont(writer, indirectReference, new Object[]{new Integer(firstChar), new Integer(lastChar), shortTag, Boolean.valueOf(subset)});
                     break;
                 }
                 case BaseFont.FONT_TYPE_CJK:
                     baseFont.writeFont(writer, indirectReference, new Object[]{cjkTag});
                     break;
                 case BaseFont.FONT_TYPE_TTUNI:
-                    baseFont.writeFont(writer, indirectReference, new Object[]{longTag});
+                    baseFont.writeFont(writer, indirectReference, new Object[]{longTag, Boolean.valueOf(subset)});
                     break;
             }
         }
@@ -270,7 +277,8 @@ class FontDetails {
         }
     }
     
-    /** Indicates if all the glyphs and widths for that particular
+    /**
+     * Indicates if all the glyphs and widths for that particular
      * encoding should be included in the document.
      * @return <CODE>false</CODE> to include all the glyphs and widths.
      */
@@ -278,7 +286,8 @@ class FontDetails {
         return subset;
     }
     
-    /** Indicates if all the glyphs and widths for that particular
+    /**
+     * Indicates if all the glyphs and widths for that particular
      * encoding should be included in the document. Set to <CODE>false</CODE>
      * to include all.
      * @param subset new value of property subset
